--- a/week 2-1-Layouts in JetpackCompose/MyApplication/app/build.gradle
+++ b/week 2-1-Layouts in JetpackCompose/MyApplication/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation "androidx.compose.ui:ui:1.0.5"
     implementation "androidx.compose.material:material:1.0.5"
     implementation "androidx.compose.ui:ui-tooling-preview:1.0.5"
+    implementation "androidx.compose.material:material-icons-extended:1.0.5"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
     implementation 'androidx.activity:activity-compose:1.4.0'
     testImplementation 'junit:junit:4.+'
