--- a/week 2-1-Layouts in JetpackCompose/MyApplication/app/build.gradle
+++ b/week 2-1-Layouts in JetpackCompose/MyApplication/app/build.gradle
@@ -63,4 +63,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.0.5"
     debugImplementation "androidx.compose.ui:ui-tooling:1.0.5"
+
+    implementation 'io.coil-kt:coil-compose:1.3.0'
 }
