--- a/week 2-1-Layouts in JetpackCompose/MyApplication/app/build.gradle
+++ b/week 2-1-Layouts in JetpackCompose/MyApplication/app/build.gradle
@@ -65,4 +65,6 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:1.0.5"
 
     implementation 'io.coil-kt:coil-compose:1.3.0'
+
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-rc02"
 }
